<resources>
    <string name="app_name">PilotIvoryBridge</string>
    <string name="app_running_title">Shepherd</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="guest_login">Continue As a Guest</string>
    <string name="signup">No account yet? Sign up here!</string>
    <string name="btn_signup">Register</string>
    <string name="title_activity_google_sign_in">Sign in</string>
    <string name="already_signedup">Already have an account? Click to login!</string>
    <string name="signout">Sign out</string>
    <string name="takesurvey">Take survey</string>
    <string name="seehistory">Summary</string>
    <string name="connectdevices">Connect devices</string>
    <string name="account">Account</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="auth_failed">Sign in failed. Please enter correct the email and password.
    </string>

    <!-- Strings related to OAuth -->
</resources>
